fixed padding and margins on mobile and desktop

--- a/accessibuild-front/src/assets/scss/main.scss
+++ b/accessibuild-front/src/assets/scss/main.scss
@@ -78,8 +78,14 @@ body {
     padding-top: 5px;
   }
 
-  #profile {
+  #profile, #login, #register, #right-home {
     padding-top: 2em;
+    width: 90%;
+    margin: auto;
+    @media (max-width: 450px) {
+      width: 100%;
+      padding-top: 1em
+    }
   }
 
   #contacts-block {
@@ -98,6 +104,7 @@ body {
     overflow: scroll;
     @media (max-width: 450px) {
       height: 40%;
+      padding: 1em;
     }
   }
 
